Renaming package to Ryacas0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -129,4 +129,4 @@ importFrom(xml2,xml_find_all)
 importFrom(xml2,xml_name)
 importFrom(xml2,xml_root)
 importFrom(xml2,xml_text)
-useDynLib(Ryacas, .registration = TRUE)
+useDynLib(Ryacas0, .registration = TRUE)
