--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: Ryacas
+Package: Ryacas0
 Version: 0.4.1.9000
-Title: R Interface to the Yacas Computer Algebra System
+Title: Legacy version of Ryacas (R Interface to the Yacas Computer Algebra System)
 Authors@R: c(
     person(given = "Mikkel Meyer", family = "Andersen",
         email = "mikl@math.aau.dk", role = c("aut", "cre")),
@@ -17,7 +17,7 @@ Authors@R: c(
   )
 Maintainer: Mikkel Meyer Andersen <mikl@math.aau.dk>
 Encoding: UTF-8
-Description: An interface to the yacas computer algebra system.
+Description: A legacy version of Ryacas, an interface to the yacas computer algebra system.
 Depends: R (>= 3.3.0)
 Imports:
     methods,
@@ -36,8 +36,8 @@ Suggests:
     igraph,
     testthat
 License: GPL-2
-URL: https://github.com//mikldk/ryacas, http://www.yacas.org
-BugReports: https://github.com/mikldk/ryacas/issues
+URL: https://github.com/mikldk/ryacas0, http://www.yacas.org
+BugReports: https://github.com/mikldk/ryacas0/issues
 Roxygen: list(markdown = TRUE, roclets = c("rd", "collate", "namespace"))
 RoxygenNote: 6.1.1
 VignetteBuilder: knitr
