--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,8 +38,8 @@ Suggests:
     igraph,
     testthat
 License: GPL-2
-URL: https://github.com/mikldk/ryacas0, http://www.yacas.org
-BugReports: https://github.com/mikldk/ryacas0/issues
+URL: https://github.com/r-cas/ryacas0, http://www.yacas.org
+BugReports: https://github.com/r-cas/ryacas0/issues
 Roxygen: list(markdown = TRUE, roclets = c("rd", "collate", "namespace"))
-RoxygenNote: 6.1.1.9000
+RoxygenNote: 7.0.2
 VignetteBuilder: knitr
