--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,5 @@
-pandoc: '2.5'
-pkgdown: 1.5.1
+pandoc: 2.19.2
+pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
   elaborate-reference: elaborate-reference.html
@@ -7,5 +7,5 @@ articles:
   latent-variable-model: latent-variable-model.html
   ssm-matrix: ssm-matrix.html
   sym-matrix-vector: sym-matrix-vector.html
-last_built: 2020-09-29T17:31Z
+last_built: 2023-01-12T07:13Z
 
